# tp_hometask

./: README.md
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.h  main.cpp
task2/C/: main.cpp  main.h
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task5/: install_deps.sh
task5/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: WeatherTestCase.cpp
